changing database name

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,8 @@
 spring:
   data:
     mongodb:
-      uri: mongodb://localhost:27017/tasks
+      uri: mongodb://localhost:27017/task-manager
+
+springdoc:
+  swagger-ui:
+    tagsSorter: alpha
